--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,15 @@
       <artifactId>postgresql</artifactId>
       <version>42.7.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+
+
+    <dependency>
+      <groupId>org.springframework.security.oauth.boot</groupId>
+      <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+      <version>2.1.6.RELEASE</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>back4</finalName>
