--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
 
     <dependency>
       <groupId>javax.servlet</groupId>
